<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PedometerExperiment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="walking_text">Walking</string>
    <string name="steps_text">当前行走步数：</string>
    <string name="steps_zero">0</string>
    <string name="start_text">开始计步</string>
    <string name="end_text">结束计步</string>
    <string name="reset_text">重置</string>
    <string name="notification_subtitle">计步器</string>
    
</resources>
