<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.xaut.pedometerexperiment.MainActivity" >

    <ImageView
        android:id="@+id/walking_image"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:src="@drawable/walking"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:maxWidth="400dp"
        android:minHeight="400dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/walking_text" />
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/walking_image"
        android:layout_marginTop="60dp"  
        android:layout_centerHorizontal="true">
        
    <TextView 
        android:id="@+id/steps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"     
        android:textSize="23sp"
        android:text="@string/steps_text"/>
    
    <TextView 
        android:id="@+id/steps_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_toRightOf="@id/steps_text"    
        android:textSize="23sp"
        android:text="@string/steps_zero"/>
        
    </RelativeLayout>
    
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        
    <ImageButton
        android:id="@+id/start_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/start"
        android:contentDescription="@string/start_text" />

    <ImageButton
        android:id="@+id/end_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_image"
        android:layout_toRightOf="@+id/start_image"
        android:contentDescription="@string/end_text"
        android:src="@drawable/end" />
    
    <ImageButton
        android:id="@+id/reset_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_image"
        android:layout_toRightOf="@+id/end_image"
        android:contentDescription="@string/reset_text"
        android:src="@drawable/reset" />
    
    </RelativeLayout>

</RelativeLayout>
